# gpt-powered-job-applications-tracker

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_helpers.py
